# Boids_PP_Lab1

./: CMakeLists.txt  README.md  boid.cpp  boid.hpp  config.hpp  main.cpp
